<resources>
    <string name="app_name">JdA_Films</string>
    <string name="menu_films">Pel·lícules</string>
    <string name="menu_add_film">Afegir pel·lícula</string>
    <string name="menu_settings">Configuració</string>
    
    <string name="btnLogin">Login</string>
    <string name="txtUsername">Usuari</string>
    <string name="txtPassword">Contrasenya</string>

    <string name="nomPeli">Nom pel·lícula</string>
    <string name="valoracioPeli">Valoració</string>
    <string name="categoriaPeli">Categoria</string>

    <string-array name="categories">
        <item>Aventures</item>
        <item>Terror</item>
        <item>Ciència Ficció</item>
        <item>Comèdia</item>
    </string-array>

    <string name="idioma">Idioma</string>
    <string name="removeAll">Elimina totes preferències</string>
    <string name="catala">Català</string>
    <string name="english">English</string>
    <string name="credencials_ok">Credencials correctes</string>
    <string name="credencials_f">Credencials incorrectes</string>
    <string name="no_blank_fields">NO ES PERMETEN CAMPS EN BLANC</string>
    <string name="save">Guardar</string>
    <string name="clear">ESBORRAR TOT</string>
    <string name="totEliminat">Has esborrat totes les pel·lícules</string>
    <string name="resEliminat">No s\'ha esborrat cap pel·lícula</string>
    <string name="esborraPrefs">¿Estàs segur d\'esborrar totes les preferències?</string>
    <string name="prefsEsborrades">Totes les preferències han sigut esborrades</string>
    <string name="prefsNoEsborrades">Preferències NO esborrades</string>
    <string name="ok">D\'acord</string>
    <string name="cancela">Cancel·lar</string>
</resources>